--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+body {
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(45deg, #d2001a, #7462ff, #17a2f3, #23d541);
+  background-size: 300% 300%;
+  animation: color 12s ease-in-out infinite;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes color {
+  0% {
+    background-position: 0 50%;
   }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0 50%;
+  }
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box1 {
+  margin-top: 50px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.box1-5 {
+  margin-top: 15px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.child1 {
+  position: relative;
+  margin: 1px;
+}
+
+.img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: 20% 20%;
+  border-radius: 50%;
+  border: 5px solid #eecf06;
+  /* 	border: 5px solid black; */
+}
+
+.box3 {
+  margin: 15px;
+  border-radius: 10px;
+  border: 2px solid#ffed7a;
+  display: block;
+  background-color: #ffffff;
+  opacity: 0.8;
 }
